[package]
name = "lucca_faces_autoplay_v2"
version = "0.1.0"
edition = "2021"


[dependencies]
ahash = {version = "0.8.7", features = ["std", "serde"]}
anyhow = "1.0.79"
dotenv = "0.15.0"
reqwest = {version = "0.11.23", features = ["blocking", "cookies", "json"]}
ron = "0.8.1"
scraper = "0.18.1"
serde = {version = "1.0.195", features = ["derive"]}
url = "2.5.0"
